--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,9 @@
     "express": "^4.18.1",
     "mongoose": "^6.3.5",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "consultar-cnpj": "^1.0.15",
+    "multer": "^1.4.5-lts.1"
   },
   "scripts": {
     "start": "node",
