--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,14 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "consultar-cnpj": "^1.0.15",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16",
-    "consultar-cnpj": "^1.0.15",
-    "multer": "^1.4.5-lts.1"
+    "pdf2json": "^2.0.1",
+    "pdfreader": "^2.0.0"
   },
   "scripts": {
     "start": "node",
